[gd_scene load_steps=20 format=2]

[ext_resource path="res://learn_กอ/2592336.jpg" type="Texture" id=1]
[ext_resource path="res://learn_กอ/topic.png" type="Texture" id=2]
[ext_resource path="res://learn_กอ/hen.png" type="Texture" id=3]
[ext_resource path="res://learn_กอ/กอไก่.png" type="Texture" id=4]
[ext_resource path="res://learn_กอ/sound_button.png" type="Texture" id=5]
[ext_resource path="res://learn_กอ/next_button.png" type="Texture" id=6]
[ext_resource path="res://script/Area2D.gd" type="Script" id=7]
[ext_resource path="res://ก.wav" type="AudioStream" id=8]
[ext_resource path="res://assests/pngegg.png" type="Texture" id=9]
[ext_resource path="res://Scenes/learn_ก.gd" type="Script" id=10]
[ext_resource path="res://Fonts/CSPraJad-bold.otf" type="DynamicFontData" id=11]
[ext_resource path="res://ตกแต่ง/ruler.png" type="Texture" id=12]
[ext_resource path="res://ตกแต่ง/crayon.png" type="Texture" id=13]
[ext_resource path="res://ตกแต่ง/jupiter.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
resource_name = "stretch"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer2/owl:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 488 ), Vector2( 128, 488 ), Vector2( 128, 488 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer2/owl:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer2/owl:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.26125, 0.26125 ), Vector2( -0.245792, 0.232155 ), Vector2( 0.251687, 0.254537 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotate"
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/pic:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 800, 256 ), Vector2( 800, 256 ), Vector2( 800, 256 ), Vector2( 800, 256 ), Vector2( 800, 256 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/pic:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 16.2734, -0.33134, -14.2738, 0.0 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 56.9695

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 72, 96 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 1
font_data = ExtResource( 11 )

[node name="กอไก่Scene" type="Node2D"]
script = ExtResource( 10 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 583.36, 313.149 )
scale = Vector2( 0.390882, 0.390882 )
texture = ExtResource( 1 )

[node name="topic" type="Sprite" parent="."]
position = Vector2( 506.1, 52.214 )
scale = Vector2( 0.389999, 0.389999 )
texture = ExtResource( 2 )

[node name="กอไก่" type="Sprite" parent="."]
position = Vector2( 488, 256 )
scale = Vector2( 1.13359, 1.13359 )
texture = ExtResource( 4 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/stretch = SubResource( 1 )

[node name="owl" type="Sprite" parent="AnimationPlayer2"]
position = Vector2( 128, 488 )
scale = Vector2( 0.26125, 0.26125 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rotate = SubResource( 2 )

[node name="pic" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 800, 256 )
scale = Vector2( 0.383185, 0.383185 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 7 )

[node name="Sound_button" type="Sprite" parent="Area2D"]
position = Vector2( 216, 232 )
scale = Vector2( 0.284048, 0.284048 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 208, 232 )
shape = SubResource( 3 )

[node name="Sound" type="AudioStreamPlayer2D" parent="Area2D"]
position = Vector2( 216, 232 )
stream = ExtResource( 8 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 792.0
margin_top = 504.0
margin_right = 1150.0
margin_bottom = 601.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 128, 488 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 4 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.976471, 0.964706, 0.815686, 1 )
polygon = PoolVector2Array( 192, 464, 240, 448, 240, 408, 656, 408, 656, 536, 240, 536, 240, 472 )

[node name="RichTextLabel" type="RichTextLabel" parent="Polygon2D"]
margin_left = 264.0
margin_top = 432.0
margin_right = 648.0
margin_bottom = 528.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Polygon2D"]
wait_time = 0.05
autostart = true

[node name="ตกแต่ง1" type="Sprite" parent="."]
position = Vector2( 648, 536 )
scale = Vector2( 0.0937501, 0.0937501 )
texture = ExtResource( 12 )

[node name="ตกแต่ง2" type="Sprite" parent="."]
position = Vector2( 256, 400 )
scale = Vector2( 0.0937501, 0.0937501 )
texture = ExtResource( 14 )

[node name="ตกแต่ง3" type="Sprite" parent="."]
position = Vector2( 304, 408 )
rotation = 1.40848
scale = Vector2( 0.078125, 0.078125 )
texture = ExtResource( 13 )
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="input_event" from="Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="timeout" from="Polygon2D/Timer" to="." method="_on_Timer_timeout"]
